--- a/frontEnd/src/locales/kg/translation.json
+++ b/frontEnd/src/locales/kg/translation.json
@@ -23,7 +23,12 @@
     "next": "Кийинки",
     "previous": "Мурунку",
     "confirm": "Ырастоо",
-    "more": "Толугураак"
+    "more": "Толугураак",
+    "error": "❌ Ката",
+    "alert": {
+      "deletedSuccess": "Сүрөт ийгиликтүү өчүрүлдү!",
+      "deleteFailed": "Сүрөттү өчүрүү мүмкүн болгон жок"
+    }
   },
   "header": {
     "home": "Башкы бет",
@@ -54,29 +59,56 @@
     "confirmPassword": "Сырсөздү кайра киргизүү",
     "forgotPassword": "Сырсөздү унуттуңузбу?",
     "resetPassword": "Сырсөздү жаңылоо",
+    "resetTitle": "🔐 Сыр сөздү өзгөртүү",
     "newPassword": "Жаңы сырсөз",
     "createAccount": "Жаңы аккаунт түзүү",
     "alreadyHaveAccount": "Сизде аккаунт барбы?",
     "dontHaveAccount": "Аккаунт жокпу?",
     "rememberMe": "Мени эстеп кал",
     "sendOtp": "Код жөнөтүү",
-    "verifyOtp": "Кодду текшерүү",
+    "verifyOtpTitle": "🔐 OTPни тастыктаңыз",
     "verificationCode": "Текшерүү коду",
     "successRegistration": "Сиз ийгиликтүү катталдыңыз!",
     "successLogin": "Сиз ийгиликтүү кирдиңиз!",
     "myProfile": "Менин профилим",
     "saveChanges": "Өзгөртүүлөрдү сактоо",
     "noAccount": "Аккаунтуңуз жокпу? Катталуу",
+    "alert":{
+      "signupSuccess": "Каттоо ийгиликтүү болду!",
+      "signupFailed": "Каттоо учурунда ката кетти",
+      "userExists": "Мындай колдонуучу бар. Кирип же башка email колдонуңуз.",
     "fillFields": "Бардык талааларды толтуруңуз.",
     "success": "Ийгиликтүү кирдиңиз!",
     "failed": "Кирүү ишке ашкан жок. Маалыматтарыңызды текшериңиз.",
-    "verifyOtpTitle": "🔐 OTPни тастыктаңыз",
-    "resetTitle": "🔐 Сыр сөздү өзгөртүү",
     "newPasswordLabel": "Жаңы сыр сөз",
     "resetButton": "Сыр сөздү жаңыртуу",
     "successTitle": "Сыр сөз ийгиликтүү өзгөртүлдү",
     "successMessage": "Сыр сөзүңүз жаңыртылды.",
-    "backToLogin": "Кайра кирүү барагына кайтуу"
+    "backToLogin": "Кайра кирүү барагына кайтуу",   "invalidEmail": "Туура email жазыңыз.",
+    "otpSent": "OTP коду email дарегиңизге жөнөтүлдү.",
+    "serverError": "Сервер катасы",
+    "errorSendingOtp": "OTP жөнөтүүдө ката кетти",
+    "passwordShort": "Сыр сөз кеминде 6 белгиден турушу керек.",
+    "otpRequired": "OTP кодун жазыңыз.",
+    "emailExists": "Бул email мурунтан эле катталган.",
+    "otpVerified": "OTP ийгиликтүү текшерилди! Эми сиз сырсөздү калыбына келтире аласыз.",
+    "noEmail": "Email табылган жок. Кайрадан жазыңыз.",
+    "errorOccurred": "Ката кетти. Кайра аракет кылыңыз.",
+    "errorsendingOtp": "OTP жөнөтүүдө ката кетти:",
+    "failedToSendOtp": "OTP почтага жөнөтүлгөн жок",
+    "noEmailFound": "⚠️ Электрондук почта табылган жок. Сураныч, алгач OTP текшериңиз.",
+    "passwordResetSuccess": "✅ Сыр сөз ийгиликтүү жаңыртылды! Эми кире аласыз."
+    },
+    "validation": {
+      "required": "Бул талаа милдеттүү",
+      "invalidEmail": "Туура email жазыңыз",
+      "minLength": "Маани өтө кыска",
+      "maxLength": "Маани өтө узун",
+      "fillFields": "Бардык талааларды толтуруңуз.",
+      "passwordShort": "Сыр сөз кеминде 6 белгиден турушу керек.",
+      "otpRequired": "OTP кодун жазыңыз.",
+      "passwordTooShort": "Сыр сөз кеминде 6 белгиден турушу керек."
+    }
   }, 
   "admin":{
     "title": "Админге кош келиңиз",
@@ -142,6 +174,7 @@
   "tourUpdatedSuccessfully": "Тур ийгиликтүү жаңыртылды!"
   },
   "tour": {
+    "success": "✅ Сапар ийгиликтүү кошулду!",
     "ourTravels": "БИЗДИН САПАРЛАР",
     "searchTours": "Турларды издөө.....",
     "details": "Толугураак",
@@ -191,6 +224,10 @@
       "includesRequired": "Кеминде бир кызмат кошуңуз",
       "startDateRequired": "Кеминде бир башталыш датасы керек"
     },
+    "alert": {
+      "updatedSuccess": "✅ Сапар ийгиликтүү жаңыртылды!",
+      "updatedFailed": "❌ Сапар жаңыртылган жок"
+    },
     "successMessage": "Тур ийгиликтүү кошулду!",
     "errorMessage": "Турду кошууда ката кетти",
     "errors": {
@@ -235,9 +272,12 @@
         "cancelled": "Жокко чыгарылды"
       },
       "alert": {
+        "sentSuccess": "✅ Бронирование ийгиликтүү болду!",
         "loginRequired": "❌ Брондоо үчүн кирүүңүз керек.",
         "success": "✅ Брондоо сурамы ийгиликтүү жөнөтүлдү! 'Менин брондоолорумду' текшериңиз.",
-        "failed": "❌ Брондоо ишке ашкан жок. Кайра аракет кылыңыз."
+        "failed": "❌ Брондоо ишке ашкан жок. Кайра аракет кылыңыз.",
+        "deletedSuccess": "Бронирование ийгиликтүү өчүрүлдү!",
+        "deleteFailed": "Бронированиени өчүрүү мүмкүн болбоду"
       }
   },
     "pagination": {
@@ -290,7 +330,12 @@
     "resources":{
       "hubspotByNumbers": "HubSpot сандар менен",
       "learnMore": "Көбүрөөк билүү",
-      "loading": "Жүктөлүүдө"
+      "loading": "Жүктөлүүдө",
+      "alert": {
+        "addedSuccess": "✅ Кардар ийгиликтүү кошулду!",
+        "createdSuccess": "✅ Ресурстун маалыматы ийгиликтүү түзүлдү!",
+        "updatedSuccess": "✅ Ресурстун маалыматы ийгиликтүү жаңыртылды!"
+      }
     }, 
     "partners": {
       "title": "Ишенимдүү өнөктөштөрүбүз",
@@ -304,7 +349,11 @@
       "title": "Биздин бактылуу кардарларыбы",
       "comments": "Пикирлер",
       "writeComment": "Пикир жазуу",
-      "customerNotFound": "Кардарлардын сын-пикирлери табылган жок."
+      "customerNotFound": "Кардарлардын сын-пикирлери табылган жок.",
+      "alert": {
+        "updatedSuccess": "✅ Кардардын маалыматы ийгиликтүү жаңыртылды!",
+        "createdSuccess": "✅ Кардар ийгиликтүү түзүлдү!"
+      }
     },
   "footer": {
     "home": "Башкы бет",
