--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -23,7 +23,12 @@
     "next": "Далее",
     "previous": "Предыдущий",
     "confirm": "Подтвердить",
-    "more": "Подробнее"
+    "more": "Подробнее",
+    "error": "❌ Ошибка",
+    "alert": {
+      "deletedSuccess": "Фото успешно удалено!",
+      "deleteFailed": "Не удалось удалить фото"
+    }
   },
     "header": {
       "home": "Главная",
@@ -55,13 +60,14 @@
       "confirmPassword": "Подтвердите пароль",
       "forgotPassword": "Забыли пароль?",
       "resetPassword": "Сбросить пароль",
+      "resetTitle": "🔐 Сброс пароля",
       "newPassword": "Новый пароль",
       "createAccount": "Создать аккаунт",
       "alreadyHaveAccount": "Уже есть аккаунт?",
       "dontHaveAccount": "Нет аккаунта?",
       "rememberMe": "Запомнить меня",
       "sendOtp": "Отправить код",
-      "verifyOtp": "Подтвердить код",
+      "verifyOtpTitle": "🔐 Подтвердите OTP",
       "verificationCode": "Код подтверждения",
       "successRegistration": "Вы успешно зарегистрировались!",
       "successLogin": "Вход выполнен успешно!",
@@ -69,17 +75,42 @@
       "saveChanges":"Сохранить изменения",
       "noAccount": "Нет аккаунта? Зарегистрируйтесь",
       "alert": {
+        "signupSuccess": "Регистрация прошла успешно!",
+        "signupFailed": "Ошибка регистрации",
+        "userExists": "Пользователь уже существует. Войдите или используйте другой email.",
         "fillFields": "Пожалуйста, заполните все поля.",
         "success": "Вход выполнен успешно!",
         "failed": "Ошибка входа. Проверьте свои данные.",
         "sendOtp": "Отправить OTP",
-        "verifyOtpTitle": "🔐 Подтвердите OTP",
-        "resetTitle": "🔐 Сброс пароля",
         "newPasswordLabel": "Новый пароль",
         "resetButton": "Сбросить пароль",
         "successTitle": "Пароль успешно изменён",
         "successMessage": "Ваш пароль был обновлён.",
-        "backToLogin": "Назад к входу"
+        "backToLogin": "Назад к входу",
+        "invalidEmail": "Пожалуйста, введите корректный email.",
+        "serverError": "Ошибка сервера",
+        "errorSendingOtp": "Ошибка при отправке OTP",
+        "emailExists": "Email уже зарегистрирован.",
+      "otpSent": "OTP был отправлен на вашу почту.",
+      "otpVerified": "OTP подтверждён! Теперь вы можете сбросить пароль.",
+      "noEmail": "Email не найден. Пожалуйста, введите его снова.",
+      "errorOccurred": "Произошла ошибка. Попробуйте ещё раз.",
+      "passwordShort": "Пароль должен содержать минимум 6 символов.",
+      "otpRequired": "Пожалуйста, введите OTP.",
+      "errorsendingOtp": "Ошибка при отправке OTP:",
+      "failedToSendOtp": "Не удалось отправить OTP на почту",
+      "noEmailFound": "⚠️ Электронная почта не найдена. Пожалуйста, сначала подтвердите OTP.",
+      "passwordResetSuccess": "✅ Пароль успешно сброшен! Теперь вы можете войти."
+      },
+      "validation": {
+        "required": "Это поле обязательно",
+        "invalidEmail": "Введите действительный email",
+        "minLength": "Слишком короткое значение",
+        "maxLength": "Слишком длинное значение",
+        "passwordShort": "Пароль должен содержать минимум 6 символов.",
+        "otpRequired": "Пожалуйста, введите OTP.",
+        "errorsendingOtp": "Ошибка при отправке OTP:",
+        "passwordTooShort": "Пароль должен быть не менее 6 символов."
       }
     },
     "admin":{
@@ -146,6 +177,7 @@
       "tourUpdatedSuccessfully":"Тур успешно обновлен!"
     },
     "tour": {
+      "success": "✅ Тур успешно добавлен!",
       "ourTravels": "НАШИ ПУТЕШЕСТВИЯ",
       "searchTours": "Искать туры....",
       "details": "Детали",
@@ -195,6 +227,10 @@
         "includesRequired": "Добавьте хотя бы один пункт 'включено'",
         "startDateRequired": "Добавьте хотя бы одну дату начала"
       },
+      "alert": {
+        "updatedSuccess": "✅ Тур успешно обновлён!",
+        "updatedFailed": "❌ Тур не был обновлён"
+      },
       "successMessage": "Тур успешно добавлен!",
       "errorMessage": "Ошибка при добавлении тура",
       "errors": {
@@ -239,9 +275,12 @@
         "cancelled": "Отменено"
       },
       "alert": {
+        "sentSuccess": "✅ Бронирование успешно!",
         "loginRequired": "❌ Вы должны войти в систему, чтобы заь.",
         "success": "✅ Ваша заявка успешно отправлена! Проверьте 'Мои бронирования'.",
-        "failed": "❌ Ошибка бронирования. Попробуйте снова."
+        "failed": "❌ Ошибка бронирования. Попробуйте снова.",
+        "deletedSuccess": "Бронирование успешно удалено!",
+        "deleteFailed": "Не удалось удалить бронирование"
       }
     },
       "pagination": {
@@ -294,7 +333,12 @@
       "resources":{
         "hubspotByNumbers": "HubSpot в цифрах",
         "learnMore": "Узнать больше",
-        "loading": "Загрузка"
+        "loading": "Загрузка",
+        "alert": {
+          "addedSuccess": "✅ Клиент успешно добавлен!",
+          "createdSuccess": "✅ Деталь ресурса успешно создана!",
+          "updatedSuccess": "✅ Деталь ресурса успешно обновлена!"
+        }
       }, 
       "partners" : {
         "title": "Наши надежные партнёры",
@@ -308,7 +352,11 @@
         "title": "Наши счастливые клиенты",
         "comments": "Отзывы", 
         "writeCpomment": "Написать отзыв",
-        "customerNotFound": "Отзывы клиентов не найдены."
+        "customerNotFound": "Отзывы клиентов не найдены.",
+        "alert": {
+          "updatedSuccess": "✅ Данные клиента успешно обновлены!",
+          "createdSuccess": "✅ Клиент успешно создан!"
+        }
       } ,
       "footer": {
       "home": "Главная",
