--- a/frontEnd/src/locales/kg/translation.json
+++ b/frontEnd/src/locales/kg/translation.json
@@ -277,7 +277,9 @@
         "success": "✅ Брондоо сурамы ийгиликтүү жөнөтүлдү! 'Менин брондоолорумду' текшериңиз.",
         "failed": "❌ Брондоо ишке ашкан жок. Кайра аракет кылыңыз.",
         "deletedSuccess": "Бронирование ийгиликтүү өчүрүлдү!",
-        "deleteFailed": "Бронированиени өчүрүү мүмкүн болбоду"
+        "deleteFailed": "Бронированиени өчүрүү мүмкүн болбоду",
+        "adminPhoneMissing": "⚠️ Брондоо убактылуу жеткиликсиз. Администратор менен байланышыңыз."
+
       }
   },
     "pagination": {
@@ -352,7 +354,10 @@
       "customerNotFound": "Кардарлардын сын-пикирлери табылган жок.",
       "alert": {
         "updatedSuccess": "✅ Кардардын маалыматы ийгиликтүү жаңыртылды!",
-        "createdSuccess": "✅ Кардар ийгиликтүү түзүлдү!"
+        "createdSuccess": "✅ Кардар ийгиликтүү түзүлдү!",
+        "mustLoginComment": "⚠️ Комментарий жазуу үчүн киришиңиз же катталышыңыз керек.",
+        "mustLoginReply": "⚠️ Жооп жазуу үчүн киришиңиз же катталышыңыз керек.",
+        "deleteReplyConfirm": "Бул жоопту өчүрөсүзбү?"
       }
     },
   "footer": {
