--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -280,7 +280,9 @@
         "success": "✅ Ваша заявка успешно отправлена! Проверьте 'Мои бронирования'.",
         "failed": "❌ Ошибка бронирования. Попробуйте снова.",
         "deletedSuccess": "Бронирование успешно удалено!",
-        "deleteFailed": "Не удалось удалить бронирование"
+        "deleteFailed": "Не удалось удалить бронирование",
+        "adminPhoneMissing": "⚠️ Бронирование временно недоступно. Пожалуйста, свяжитесь с администратором."
+
       }
     },
       "pagination": {
@@ -355,7 +357,10 @@
         "customerNotFound": "Отзывы клиентов не найдены.",
         "alert": {
           "updatedSuccess": "✅ Данные клиента успешно обновлены!",
-          "createdSuccess": "✅ Клиент успешно создан!"
+          "createdSuccess": "✅ Клиент успешно создан!",
+          "mustLoginComment": "⚠️ Вам нужно войти или зарегистрироваться, чтобы оставить комментарий.",
+          "mustLoginReply": "⚠️ Вам нужно войти или зарегистрироваться, чтобы ответить на комментарий.",
+          "deleteReplyConfirm": "Удалить этот ответ?"
         }
       } ,
       "footer": {
