--- a/frontEnd/src/locales/kg/translation.json
+++ b/frontEnd/src/locales/kg/translation.json
@@ -25,6 +25,8 @@
     "confirm": "Ырастоо",
     "more": "Толугураак",
     "error": "❌ Ката",
+    "fetchingData": "Маалымат жүктөлүүдө...",
+    "confirmDeleteTour": "Бул турду өчүргүңүз келгенине ишенесизби?",
     "alert": {
       "deletedSuccess": "Сүрөт ийгиликтүү өчүрүлдү!",
       "deleteFailed": "Сүрөттү өчүрүү мүмкүн болгон жок"
@@ -190,7 +192,11 @@
       "1": "1 күн",
       "2": "2 күн",
       "3": "3 күн",
+      "4": "4 күн",
+      "5": "5 күн",
+      "6": "6 күн",
       "7": "1 жума",
+      "9": "9 күн",
       "custom": "Ыңгайлаштырылган"
     },
     "startDates": "Башталыш даталары",
@@ -269,7 +275,8 @@
       "status": {
         "pending": "Күтүүдө",
         "approved": "Бекитилди",
-        "cancelled": "Жокко чыгарылды"
+        "cancelled": "Жокко чыгарылды",
+        "rejected": "Четке кагылды"
       },
       "alert": {
         "sentSuccess": "✅ Бронирование ийгиликтүү болду!",
