--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -25,6 +25,8 @@
     "confirm": "Подтвердить",
     "more": "Подробнее",
     "error": "❌ Ошибка",
+    "fetchingData": "Загрузка данных...",
+    "confirmDeleteTour": "Вы уверены, что хотите удалить этот тур?",
     "alert": {
       "deletedSuccess": "Фото успешно удалено!",
       "deleteFailed": "Не удалось удалить фото"
@@ -193,7 +195,11 @@
         "1": "1 день",
         "2": "2 дня",
         "3": "3 дня",
+        "4": "4 дня",
+        "5": "5 дня",
+        "6": "6 дня",
         "7": "1 неделя",
+        "9": "9 дня",
         "custom": "Индивидуально"
       },
       "startDates": "Даты начала",
@@ -272,7 +278,8 @@
       "status": {
         "pending": "В ожидании",
         "approved": "Одобрено",
-        "cancelled": "Отменено"
+        "cancelled": "Отменено",
+        "rejected": "Отклонено"
       },
       "alert": {
         "sentSuccess": "✅ Бронирование успешно!",
