--- a/frontEnd/src/locales/en/translation.json
+++ b/frontEnd/src/locales/en/translation.json
@@ -25,6 +25,8 @@
     "confirm": "Confirm",
     "more": "More",
     "error": "❌ Error",
+    "fetchingData": "Fetching data...",
+    "confirmDeleteTour": "Are you sure you want to delete this tour?",
     "alert": {
       "deletedSuccess": "Photo deleted successfully!",
       "deleteFailed": "Failed to delete photo"
@@ -187,7 +189,11 @@
       "1": "1 day",
       "2": "2 days",
       "3": "3 days",
-      "7": "1 week",
+      "4": "4 days",
+      "5": "5 days",
+      "6": "6 days",
+      "7": "7 days",
+      "8": "9 days",
       "custom": "Custom"
     },
     "location": "Location",
@@ -265,7 +271,8 @@
       "status": {
         "pending": "Pending",
         "approved": "Approved",
-        "cancelled": "Cancelled"
+        "cancelled": "Cancelled",
+        "rejected": "Rejected"
       },
       "alert": {
         "setSuccess": "✅ Booking successful!",
