style: optimize responsive design and finalize contact section with real links

--- a/frontEnd/src/locales/en/translation.json
+++ b/frontEnd/src/locales/en/translation.json
@@ -318,7 +318,7 @@
       "contacts": "Contacts",
       "location": "Location",
       "city": "Batken city",
-      "street": "Saydyman Ajy 2/8",
+      "street": "Nurgazieva street",
       "floor": "2nd floor",
       "phone": "Phone",
       "hours": "Hours",
