--- a/frontEnd/src/locales/kg/translation.json
+++ b/frontEnd/src/locales/kg/translation.json
@@ -321,7 +321,7 @@
       "contacts": "Байланыштар",
     "location": "Дарек",
     "city": "Баткен шаары",
-    "street": "Сайдыман Ажы 2/8",
+    "street": "Нургазиева кочосу",
     "floor": "2-кабат",
     "phone": "Телефон",
     "hours": "Иштөө убактысы",
