--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -324,7 +324,7 @@
         "contacts": "Контакты",
         "location": "Адрес",
         "city": "Город Баткен",
-        "street": "Сайдуман Ажы 2/8",
+        "street": "Нургазиева улица",
         "floor": "2-й этаж",
         "phone": "Телефон",
         "hours": "Часы работы",
